# tank_bot

./: .gitignore  README.md  bootup.sh  pyproject.toml  update_tank_bot.sh
tank_bot/tank_bot/: rc_motor_contoller.py
tank_bot/tank_bot/systemd_files/: system_d_setup.sh  tank_bot.service
tank_bot/tests/: test_tank_bot.py
